# vcpkgSamples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
logs/: minizip.txt  minizip_wasm-emscripten.txt
minizipTester/: CMakeLists.txt  miniunz.c  miniunz.h  minizipTester.c  minizipTester.cpp
samples/: sample.hwpx
